Small spacing fix in footer

--- a/wp-content/themes/homelesshampers/sass/layout/_footer.scss
+++ b/wp-content/themes/homelesshampers/sass/layout/_footer.scss
@@ -53,6 +53,7 @@
   font-weight: 900;
   text-transform: uppercase;
   letter-spacing: 0.3rem;
+  padding-bottom: 2rem;
 }
 
 @include grid-media($grid-desktop) {
